datepicker fix. overflow-y på body fungerer ikke med datepicker, da den kunn ser på document for å finne posisjonen til elementet.

--- a/web/src/main/resources/no/nav/sbl/dialogarena/modiabrukerdialog/web/less/felles/common.less
+++ b/web/src/main/resources/no/nav/sbl/dialogarena/modiabrukerdialog/web/less/felles/common.less
@@ -31,7 +31,7 @@
 /* Generelle elementer */
 
 HTML {
-  overflow-y: auto;
+  overflow-y: scroll;
   height: 100%;
   background: @white;
   font-size: 14px;
