--- a/web/src/main/resources/no/nav/sbl/dialogarena/modiabrukerdialog/web/less/felles/responsive.less
+++ b/web/src/main/resources/no/nav/sbl/dialogarena/modiabrukerdialog/web/less/felles/responsive.less
@@ -71,7 +71,6 @@
     overflow-x: hidden;
     position: relative;
     display: block;
-    overflow-y: auto;
   }
 
   .navbar {
